ios iframe scroll bug fix with ionic, webkit overflow
https://github.com/driftyco/ionic/issues/1151
http://davidwalsh.name/scroll-iframes-ios

<ion-content scroll="true" overflow-scroll="true" class="has-header
padding">
<h1>Dashboard00</h1>
<iframe src="http://xkcd.com" style="width:100%;height:100%"></iframe>
</ion-content>

--- a/www/css/app.css
+++ b/www/css/app.css
@@ -102,7 +102,11 @@
 	text-align: right;
 }
 
-.iframe-content {
+/*.iframe-wrapper {
+	-webkit-overflow-scrolling: touch !important;
+    overflow: scroll !important;
+}*/
+.iframe-wrapper iframe {
 	width: 100%;
-	min-height: 100%;
+	height: 100%;
 }
